tests/dex-auth/dex-crds/overlays/istio/test_data/expected/rbac.authorization.k8s.io_v1beta1_clusterrolebinding_dex.yaml
apiVersion: rbac.authorization.k8s.io/v1beta1
kind: ClusterRoleBinding
metadata:
  name: dex
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: dex
subjects:
- kind: ServiceAccount
  name: dex
  namespace: auth
